--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".Activities.MenuActivity"></activity>
+        <activity
+            android:name=".Activities.dsffds"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_dsffds"
+            android:theme="@style/FullscreenTheme" />
         <activity android:name=".Activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
