--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".Activities.TournamentTableActivity" />
+        <activity android:name=".Activities.AboutActivity" />
     </application>
 
 </manifest>
