--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".Activities.PlayerActivity" />
         <activity android:name=".Activities.FindTeamActivity" />
         <activity android:name=".Activities.TeamActivity" />
+        <activity android:name=".Activities.SheduleActivity" />
     </application>
 
 </manifest>
